# errorrepo

./: .gitignore  CMakeLists.txt  README.md  create_python_library.sh  pythoninferencetest.py  things_to_check.txt
libraries/protobuf/src/: midi.proto
libraries/torch/: CMakeLists.txt
libraries/torch/src/: torch_library.cpp
python_scripts/: create_dataset.py  create_dataset_BUG.py  losses.py  torch_path_finder.py  train.py  train_dataset.py
python_scripts/config/: gpt2_tiny.json
python_scripts_for_testing/: build_dataset_test.py  pythontest.py
src/: lib.cpp
src/common/data_structures/: encoder_config.h  track_type.h
src/common/encoder/: encoder_all.h  encoder_base.h  encoder_el.h  encoder_v2.h  representation.h  token_types.h  util.h
src/common/midi_parsing/: adjacent_range.h  midi_io.h  midi_ioOld.h  util_protobuf.h  util_protobufOld.h
src/inference/: lib_header.h  piano_roll.h
src/inference/dataset/: jagged.h
src/inference/encoder/: encoders_del.json
src/inference/enum/: density_opz.h  encoder_types.h  gm.h  model_type.h
src/inference/protobuf/: validate.h
